--- a/index.html
+++ b/index.html
@@ -1,172 +1,135 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <style>
+        body { margin: 0; padding: 0; overflow: hidden; background-color: #1e1e1e; }
+        .node { cursor: move; }
+        .link { stroke: #999; stroke-opacity: 0.6; }
+        text { font-family: Arial, sans-serif; font-size: 12px; pointer-events: none; fill: #fff; }
+        svg { width: 100vw; height: 100vh; }
+    </style>
+</head>
+<body>
+    <div id="graph"></div>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script>
+        var nodes = [{"id": "plan_teoria_de_momentos.md", "label": "Plan_teoria_de_momentos", "link_count": 6, "color": "#7f7f7f"}, /* ... resto de nodos ... */];
+        var links = [{"source": "plan_teoria_de_momentos.md", "target": "cohn \u2013 measure theory.md"}, /* ... resto de enlaces ... */];
+        var colorGroups = [];
 
-    <!DOCTYPE html>
-    <html>
-    <head>
-        <meta charset="utf-8">
-        <style>
-            body { margin: 0; padding: 0; overflow: hidden; background-color: #1e1e1e; }
-            .node { cursor: move; }
-            .link { stroke: #999; stroke-opacity: 0.6; }
-            text { font-family: Arial, sans-serif; font-size: 12px; pointer-events: none; fill: #fff; }
-            svg { width: 100vw; height: 100vh; }
-        </style>
-    </head>
-    <body>
-        <div id="graph"></div>
-        <script src="https://d3js.org/d3.v5.min.js"></script>
-        <script>
-            var nodes = [{"id": "plan_teoria_de_momentos.md", "label": "Plan_teoria_de_momentos", "link_count": 6, "color": "#7f7f7f"}, {"id": "plan_algebra_de_lie.md", "label": "Plan_algebra_de_lie", "link_count": 2, "color": "#7f7f7f"}, {"id": "hall_lie_algebras.md", "label": "Hall_lie_algebras", "link_count": 2, "color": "#7f7f7f"}, {"id": "plan_espacios_cocientes.md", "label": "Plan_espacios_cocientes", "link_count": 11, "color": "#7f7f7f"}, {"id": "evans \u2013 partial differential equations.md", "label": "Evans \u2013 partial differential equations", "link_count": 2, "color": "#7f7f7f"}, {"id": "introduction to mechanics and symmetry - jerry e. marsden.md", "label": "Introduction to mechanics and symmetry - jerry e. marsden", "link_count": 2, "color": "#7f7f7f"}, {"id": "on quotient spaces \u2014 peter g. bergmann (1973).md", "label": "On quotient spaces \u2014 peter g. bergmann (1973)", "link_count": 2, "color": "#7f7f7f"}, {"id": "federer \u2013 geometric measure theory.md", "label": "Federer \u2013 geometric measure theory", "link_count": 2, "color": "#7f7f7f"}, {"id": "mathematics for theoretical physics \u2014 jean claude dutailly.md", "label": "Mathematics for theoretical physics \u2014 jean claude dutailly", "link_count": 2, "color": "#7f7f7f"}, {"id": "equivalence relations and quotient spaces \u2014 albert s. schwarz.md", "label": "Equivalence relations and quotient spaces \u2014 albert s. schwarz", "link_count": 2, "color": "#7f7f7f"}, {"id": "cohn \u2013 measure theory.md", "label": "Cohn \u2013 measure theory", "link_count": 2, "color": "#7f7f7f"}, {"id": "quotient maps and configuration spaces of hard disks.md", "label": "Quotient maps and configuration spaces of hard disks", "link_count": 2, "color": "#7f7f7f"}, {"id": "pull_request_template.md", "label": "Pull_request_template", "link_count": 1, "color": "#7f7f7f"}, {"id": "bug_report.md", "label": "Bug_report", "link_count": 0, "color": "#7f7f7f"}, {"id": "feature_request.md", "label": "Feature_request", "link_count": 0, "color": "#7f7f7f"}];
-            var links = [{"source": "plan_teoria_de_momentos.md", "target": "cohn \u2013 measure theory.md"}, {"source": "plan_teoria_de_momentos.md", "target": "federer \u2013 geometric measure theory.md"}, {"source": "plan_teoria_de_momentos.md", "target": "evans \u2013 partial differential equations.md"}, {"source": "plan_algebra_de_lie.md", "target": "hall_lie_algebras.md"}, {"source": "hall_lie_algebras.md", "target": "plan_algebra_de_lie.md"}, {"source": "plan_espacios_cocientes.md", "target": "equivalence relations and quotient spaces \u2014 albert s. schwarz.md"}, {"source": "plan_espacios_cocientes.md", "target": "on quotient spaces \u2014 peter g. bergmann (1973).md"}, {"source": "plan_espacios_cocientes.md", "target": "quotient maps and configuration spaces of hard disks.md"}, {"source": "plan_espacios_cocientes.md", "target": "introduction to mechanics and symmetry - jerry e. marsden.md"}, {"source": "plan_espacios_cocientes.md", "target": "mathematics for theoretical physics \u2014 jean claude dutailly.md"}, {"source": "evans \u2013 partial differential equations.md", "target": "plan_teoria_de_momentos.md"}, {"source": "introduction to mechanics and symmetry - jerry e. marsden.md", "target": "plan_espacios_cocientes.md"}, {"source": "on quotient spaces \u2014 peter g. bergmann (1973).md", "target": "plan_espacios_cocientes.md"}, {"source": "federer \u2013 geometric measure theory.md", "target": "plan_teoria_de_momentos.md"}, {"source": "mathematics for theoretical physics \u2014 jean claude dutailly.md", "target": "plan_espacios_cocientes.md"}, {"source": "equivalence relations and quotient spaces \u2014 albert s. schwarz.md", "target": "plan_espacios_cocientes.md"}, {"source": "cohn \u2013 measure theory.md", "target": "plan_teoria_de_momentos.md"}, {"source": "quotient maps and configuration spaces of hard disks.md", "target": "plan_espacios_cocientes.md"}];
-            var colorGroups = [];
+        var width = window.innerWidth;
+        var height = window.innerHeight;
 
-            var width = window.innerWidth;
-            var height = window.innerHeight;
+        var svg = d3.select("#graph").append("svg")
+            .attr("width", width)
+            .attr("height", height);
 
-            var svg = d3.select("#graph")
-                .append("svg")
-                .attr("width", width)
-                .attr("height", height);
+        var g = svg.append("g");
 
-            var g = svg.append("g");
+        svg.call(d3.zoom().scaleExtent([0.1, 4]).on("zoom", zoomed));
 
-            var zoom = d3.zoom()
-                .scaleExtent([0.1, 4])
-                .on("zoom", zoomed);
+        function zoomed() { g.attr("transform", d3.event.transform); }
 
-            svg.call(zoom);
+        function customForce(alpha) {
+            const centerX = width / 2;
+            const centerY = height / 2;
+            const strength = 0.05;
+            nodes.forEach(node => {
+                node.vx += (centerX - node.x) * strength * alpha;
+                node.vy += (centerY - node.y) * strength * alpha;
+            });
+        }
 
-            function zoomed() {
-                g.attr("transform", d3.event.transform);
-            }
+        var simulation = d3.forceSimulation(nodes)
+            .force("link", d3.forceLink(links).id(d => d.id).distance(d => {
+                const sourceLinks = links.filter(l => l.source.id === d.source.id || l.target.id === d.source.id).length;
+                const targetLinks = links.filter(l => l.source.id === d.target.id || l.target.id === d.target.id).length;
+                return Math.min(150, Math.max(50, (sourceLinks + targetLinks) * 10));
+            }))
+            .force("charge", d3.forceManyBody().strength(-300))
+            .force("center", d3.forceCenter(width / 2, height / 2))
+            .force("custom", customForce)
+            .force("collision", labelCollision())
+            .alphaDecay(0.02)
+            .alphaMin(0.001)
+            .on("tick", ticked);
 
-            function customForce(alpha) {
-                const centerX = width / 2;
-                const centerY = height / 2;
-                const strength = 0.05;
+        var link = g.append("g").attr("class", "links")
+            .selectAll("line").data(links).enter().append("line").attr("class", "link");
 
-                for (let i = 0; i < nodes.length; i++) {
-                    const node = nodes[i];
-                    node.vx += (centerX - node.x) * strength * alpha;
-                    node.vy += (centerY - node.y) * strength * alpha;
+        // Nodo <g> que contiene círculo + texto
+        var node = g.append("g").attr("class", "nodes")
+            .selectAll("g").data(nodes).enter().append("g")
+            .call(d3.drag()
+                .on("start", dragstarted)
+                .on("drag", dragged)
+                .on("end", dragended))
+            .on("click", function(event, d) {
+                if (!event.defaultPrevented) {
+                    window.location.href = d.id.replace(".md", ".html");
                 }
-            }
+            });
 
-            var simulation = d3.forceSimulation(nodes)
-                .force("link", d3.forceLink(links).id(d => d.id).distance(d => {
-                    const sourceLinks = links.filter(link => link.source.id === d.source.id || link.target.id === d.source.id).length;
-                    const targetLinks = links.filter(link => link.source.id === d.target.id || link.target.id === d.target.id).length;
-                    return Math.min(150, Math.max(50, (sourceLinks + targetLinks) * 10));
-                }))
-                .force("charge", d3.forceManyBody().strength(-300))
-                .force("center", d3.forceCenter(width / 2, height / 2))
-                .force("custom", customForce)
-                .force("collision", labelCollision())
-                .alphaDecay(0.02)
-                .alphaMin(0.001)
-                .on("tick", ticked);
+        node.append("circle")
+            .attr("r", d => 5 + Math.sqrt(d.link_count))
+            .attr("fill", d => d.color);
 
-            var link = g.append("g")
-                .attr("class", "links")
-                .selectAll("line")
-                .data(links)
-                .enter().append("line")
-                .attr("class", "link");
+        node.append("text")
+            .attr("x", 8)
+            .attr("y", ".31em")
+            .text(d => d.label);
 
-            var node = g.append("g")
-                .attr("class", "nodes")
-                .selectAll("circle")
-                .data(nodes)
-                .enter().append("circle")
-                .attr("class", "node")
-                .attr("r", function(d) {
-                    var radius = 5 + Math.sqrt(d.link_count);
-                    return radius;
-                })
-                .attr("fill", function(d) {
-                    return d.color;
-                })
-                .call(d3.drag()
-                    .on("start", dragstarted)
-                    .on("drag", dragged)
-                    .on("end", dragended))
-                .on("click", function(event, d) {
-                    if (!d3.event.defaultPrevented) {  // evita click después de drag
-                        window.location.href = d.id.replace(".md", ".html");
-                    }
-                });
+        function ticked() {
+            link
+                .attr("x1", d => d.source.x)
+                .attr("y1", d => d.source.y)
+                .attr("x2", d => d.target.x)
+                .attr("y2", d => d.target.y);
 
+            node.attr("transform", d => `translate(${d.x},${d.y})`);
+        }
 
-            var text = g.append("g")
-                .attr("class", "texts")
-                .selectAll("text")
-                .data(nodes)
-                .enter().append("text")
-                .attr("x", 8)
-                .attr("y", ".31em")
-                .text(d => d.label);
+        function dragstarted(d) {
+            if (!d3.event.active) simulation.alphaTarget(0.3).restart();
+            d.fx = d.x;
+            d.fy = d.y;
+        }
 
-            function ticked() {
-                link
-                    .attr("x1", d => d.source.x)
-                    .attr("y1", d => d.source.y)
-                    .attr("x2", d => d.target.x)
-                    .attr("y2", d => d.target.y);
+        function dragged(d) {
+            d.fx = d3.event.x;
+            d.fy = d3.event.y;
+        }
 
-                node
-                    .attr("cx", d => d.x)
-                    .attr("cy", d => d.y);
+        function dragended(d) {
+            if (!d3.event.active) simulation.alphaTarget(0);
+            d.fx = null;
+            d.fy = null;
+        }
 
-                text
-                    .attr("x", d => d.x + 8)
-                    .attr("y", d => d.y + 3);
-            }
-
-            function dragstarted(d) {
-                if (!d3.event.active) simulation.alphaTarget(0.3).restart();
-                d.fx = d.x;
-                d.fy = d.y;
-            }
-
-            function dragged(d) {
-                d.fx = d3.event.x;
-                d.fy = d3.event.y;
-            }
-
-            function dragended(d) {
-                if (!d3.event.active) simulation.alphaTarget(0);
-                d.fx = null;
-                d.fy = null;
-            }
-
-            function labelCollision() {
-                var alpha = 0.5;
-                return function() {
-                    for (var i = 0; i < nodes.length; i++) {
-                        for (var j = i + 1; j < nodes.length; j++) {
-                            var nodeA = nodes[i];
-                            var nodeB = nodes[j];
-                            if (nodeA === nodeB) continue;
-
-                            var dx = nodeA.x - nodeB.x;
-                            var dy = nodeA.y - nodeB.y;
-                            var distance = Math.sqrt(dx * dx + dy * dy);
-                            var minDistance = 20;
-
-                            if (distance < minDistance) {
-                                var moveFactor = (minDistance - distance) / distance * alpha;
-                                var mx = dx * moveFactor;
-                                var my = dy * moveFactor;
-                                nodeA.x += mx;
-                                nodeA.y += my;
-                                nodeB.x -= mx;
-                                nodeB.y -= my;
-                            }
+        function labelCollision() {
+            var alpha = 0.5;
+            return function() {
+                for (var i = 0; i < nodes.length; i++) {
+                    for (var j = i + 1; j < nodes.length; j++) {
+                        var nodeA = nodes[i];
+                        var nodeB = nodes[j];
+                        if (nodeA === nodeB) continue;
+                        var dx = nodeA.x - nodeB.x;
+                        var dy = nodeA.y - nodeB.y;
+                        var distance = Math.sqrt(dx*dx + dy*dy);
+                        var minDistance = 20;
+                        if (distance < minDistance) {
+                            var moveFactor = (minDistance - distance) / distance * alpha;
+                            var mx = dx * moveFactor;
+                            var my = dy * moveFactor;
+                            nodeA.x += mx; nodeA.y += my;
+                            nodeB.x -= mx; nodeB.y -= my;
                         }
                     }
-                };
-            }
-
-        </script>
-    </body>
-    </html>
-    
+                }
+            };
+        }
+    </script>
+</body>
+</html>
