--- a/index.html
+++ b/index.html
@@ -1,135 +1,105 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <style>
-        body { margin: 0; padding: 0; overflow: hidden; background-color: #1e1e1e; }
-        .node { cursor: move; }
-        .link { stroke: #999; stroke-opacity: 0.6; }
-        text { font-family: Arial, sans-serif; font-size: 12px; pointer-events: none; fill: #fff; }
-        svg { width: 100vw; height: 100vh; }
-    </style>
+  <meta charset="utf-8">
+  <style>
+    body { margin:0; padding:0; overflow:hidden; background:#1e1e1e; }
+    .node { cursor: pointer; }
+    .link { stroke: #999; stroke-opacity: 0.6; }
+    text { font-family: Arial, sans-serif; font-size: 12px; fill: #fff; pointer-events: none; }
+    svg { width: 100vw; height: 100vh; }
+  </style>
 </head>
 <body>
-    <div id="graph"></div>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script>
-        var nodes = [{"id": "plan_teoria_de_momentos.md", "label": "Plan_teoria_de_momentos", "link_count": 6, "color": "#7f7f7f"}, /* ... resto de nodos ... */];
-        var links = [{"source": "plan_teoria_de_momentos.md", "target": "cohn \u2013 measure theory.md"}, /* ... resto de enlaces ... */];
-        var colorGroups = [];
+  <div id="graph"></div>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script>
+    // Datos de ejemplo
+    var nodes = [
+      {id: "nota1.md", label: "Nota 1", color:"#ff6347"},
+      {id: "nota2.md", label: "Nota 2", color:"#1e90ff"},
+      {id: "nota3.md", label: "Nota 3", color:"#32cd32"}
+    ];
 
-        var width = window.innerWidth;
-        var height = window.innerHeight;
+    var links = [
+      {source: "nota1.md", target: "nota2.md"},
+      {source: "nota2.md", target: "nota3.md"}
+    ];
 
-        var svg = d3.select("#graph").append("svg")
-            .attr("width", width)
-            .attr("height", height);
+    var width = window.innerWidth;
+    var height = window.innerHeight;
 
-        var g = svg.append("g");
+    var svg = d3.select("#graph")
+                .append("svg")
+                .attr("width", width)
+                .attr("height", height);
 
-        svg.call(d3.zoom().scaleExtent([0.1, 4]).on("zoom", zoomed));
+    var g = svg.append("g");
 
-        function zoomed() { g.attr("transform", d3.event.transform); }
+    var simulation = d3.forceSimulation(nodes)
+                       .force("link", d3.forceLink(links).id(d => d.id).distance(150))
+                       .force("charge", d3.forceManyBody().strength(-300))
+                       .force("center", d3.forceCenter(width/2, height/2))
+                       .on("tick", ticked);
 
-        function customForce(alpha) {
-            const centerX = width / 2;
-            const centerY = height / 2;
-            const strength = 0.05;
-            nodes.forEach(node => {
-                node.vx += (centerX - node.x) * strength * alpha;
-                node.vy += (centerY - node.y) * strength * alpha;
-            });
-        }
+    var link = g.append("g")
+                .attr("class", "links")
+                .selectAll("line")
+                .data(links)
+                .enter()
+                .append("line")
+                .attr("class","link");
 
-        var simulation = d3.forceSimulation(nodes)
-            .force("link", d3.forceLink(links).id(d => d.id).distance(d => {
-                const sourceLinks = links.filter(l => l.source.id === d.source.id || l.target.id === d.source.id).length;
-                const targetLinks = links.filter(l => l.source.id === d.target.id || l.target.id === d.target.id).length;
-                return Math.min(150, Math.max(50, (sourceLinks + targetLinks) * 10));
-            }))
-            .force("charge", d3.forceManyBody().strength(-300))
-            .force("center", d3.forceCenter(width / 2, height / 2))
-            .force("custom", customForce)
-            .force("collision", labelCollision())
-            .alphaDecay(0.02)
-            .alphaMin(0.001)
-            .on("tick", ticked);
-
-        var link = g.append("g").attr("class", "links")
-            .selectAll("line").data(links).enter().append("line").attr("class", "link");
-
-        // Nodo <g> que contiene círculo + texto
-        var node = g.append("g").attr("class", "nodes")
-            .selectAll("g").data(nodes).enter().append("g")
-            .call(d3.drag()
-                .on("start", dragstarted)
-                .on("drag", dragged)
-                .on("end", dragended))
-            .on("click", function(event, d) {
-                if (!event.defaultPrevented) {
-                    window.location.href = d.id.replace(".md", ".html");
-                }
-            });
-
-        node.append("circle")
-            .attr("r", d => 5 + Math.sqrt(d.link_count))
-            .attr("fill", d => d.color);
-
-        node.append("text")
-            .attr("x", 8)
-            .attr("y", ".31em")
-            .text(d => d.label);
-
-        function ticked() {
-            link
-                .attr("x1", d => d.source.x)
-                .attr("y1", d => d.source.y)
-                .attr("x2", d => d.target.x)
-                .attr("y2", d => d.target.y);
-
-            node.attr("transform", d => `translate(${d.x},${d.y})`);
-        }
-
-        function dragstarted(d) {
-            if (!d3.event.active) simulation.alphaTarget(0.3).restart();
-            d.fx = d.x;
-            d.fy = d.y;
-        }
-
-        function dragged(d) {
-            d.fx = d3.event.x;
-            d.fy = d3.event.y;
-        }
-
-        function dragended(d) {
-            if (!d3.event.active) simulation.alphaTarget(0);
-            d.fx = null;
-            d.fy = null;
-        }
-
-        function labelCollision() {
-            var alpha = 0.5;
-            return function() {
-                for (var i = 0; i < nodes.length; i++) {
-                    for (var j = i + 1; j < nodes.length; j++) {
-                        var nodeA = nodes[i];
-                        var nodeB = nodes[j];
-                        if (nodeA === nodeB) continue;
-                        var dx = nodeA.x - nodeB.x;
-                        var dy = nodeA.y - nodeB.y;
-                        var distance = Math.sqrt(dx*dx + dy*dy);
-                        var minDistance = 20;
-                        if (distance < minDistance) {
-                            var moveFactor = (minDistance - distance) / distance * alpha;
-                            var mx = dx * moveFactor;
-                            var my = dy * moveFactor;
-                            nodeA.x += mx; nodeA.y += my;
-                            nodeB.x -= mx; nodeB.y -= my;
-                        }
+    var node = g.append("g")
+                .attr("class","nodes")
+                .selectAll("g")
+                .data(nodes)
+                .enter()
+                .append("g")
+                .call(d3.drag()
+                    .on("start", dragstarted)
+                    .on("drag", dragged)
+                    .on("end", dragended))
+                .on("click", function(event,d){
+                    if(!event.defaultPrevented){
+                        window.location.href = d.id; // link a tu archivo .md
                     }
-                }
-            };
-        }
-    </script>
+                });
+
+    node.append("circle")
+        .attr("r", 15)
+        .attr("fill", d => d.color);
+
+    node.append("text")
+        .attr("x", 20)
+        .attr("y", 5)
+        .text(d => d.label);
+
+    function ticked(){
+      link.attr("x1", d => d.source.x)
+          .attr("y1", d => d.source.y)
+          .attr("x2", d => d.target.x)
+          .attr("y2", d => d.target.y);
+
+      node.attr("transform", d => `translate(${d.x},${d.y})`);
+    }
+
+    function dragstarted(d){
+      if(!d3.event.active) simulation.alphaTarget(0.3).restart();
+      d.fx = d.x;
+      d.fy = d.y;
+    }
+
+    function dragged(d){
+      d.fx = d3.event.x;
+      d.fy = d3.event.y;
+    }
+
+    function dragended(d){
+      if(!d3.event.active) simulation.alphaTarget(0);
+      d.fx = null;
+      d.fy = null;
+    }
+  </script>
 </body>
 </html>
