--- a/cohn – measure theory.html
+++ b/cohn – measure theory.html
@@ -13,10 +13,9 @@
     <body>
         <a href="index.html">← Back to Graph</a>
         <h1>cohn – measure theory.md</h1>
-        Construye las bases: qué es una medida, cómo se define y cómo se relaciona con integración y probabilidad. La base conceptual y rigurosa.
-
-## 🔗 Asociado al plan
-[[Plan_Teoria_de_Momentos]]
+        <p>Construye las bases: qué es una medida, cómo se define y cómo se relaciona con integración y probabilidad. La base conceptual y rigurosa.</p>
+<h2>🔗 Asociado al plan</h2>
+<p>[[Plan_Teoria_de_Momentos]]</p>
     </body>
     </html>
     
