--- a/evans – partial differential equations.html
+++ b/evans – partial differential equations.html
@@ -13,10 +13,9 @@
     <body>
         <a href="index.html">← Back to Graph</a>
         <h1>evans – partial differential equations.md</h1>
-        Muestra cómo las medidas (y en particular las de masa) se aplican en la física y en las ecuaciones diferenciales que modelan fenómenos reales.
-
-## 🔗 Asociado al plan
-[[Plan_Teoria_de_Momentos]]
+        <p>Muestra cómo las medidas (y en particular las de masa) se aplican en la física y en las ecuaciones diferenciales que modelan fenómenos reales.</p>
+<h2>🔗 Asociado al plan</h2>
+<p>[[Plan_Teoria_de_Momentos]]</p>
     </body>
     </html>
     
