--- a/federer – geometric measure theory.html
+++ b/federer – geometric measure theory.html
@@ -13,10 +13,9 @@
     <body>
         <a href="index.html">← Back to Graph</a>
         <h1>federer – geometric measure theory.md</h1>
-        Donde aparece el concepto de masa como medida geométrica. Enseña a medir áreas, volúmenes y superficies irregulares con herramientas de medida.
-
-## 🔗 Asociado al plan
-[[Plan_Teoria_de_Momentos]]
+        <p>Donde aparece el concepto de masa como medida geométrica. Enseña a medir áreas, volúmenes y superficies irregulares con herramientas de medida.</p>
+<h2>🔗 Asociado al plan</h2>
+<p>[[Plan_Teoria_de_Momentos]]</p>
     </body>
     </html>
     
