--- a/hall_lie_algebras.html
+++ b/hall_lie_algebras.html
@@ -13,20 +13,18 @@
     <body>
         <a href="index.html">← Back to Graph</a>
         <h1>hall_lie_algebras.md</h1>
-        # Brian Hall – Lie Groups, Lie Algebras, and Representations
-
-## 📖 Estado
-📘 Pendiente
-
-## 🔍 Motivo de lectura
-Base teórica sólida para comprender las álgebras de Lie y su papel en simetrías de la física.
-
-## 🔗 Asociado al plan
-[[Plan_Algebra_de_Lie]]
-
-## 📝 Notas clave
-- Cap. 1: Introducción a grupos de Lie.
-- Cap. 2: Definición y propiedades de álgebras de Lie.
+        <h1>Brian Hall – Lie Groups, Lie Algebras, and Representations</h1>
+<h2>📖 Estado</h2>
+<p>📘 Pendiente</p>
+<h2>🔍 Motivo de lectura</h2>
+<p>Base teórica sólida para comprender las álgebras de Lie y su papel en simetrías de la física.</p>
+<h2>🔗 Asociado al plan</h2>
+<p>[[Plan_Algebra_de_Lie]]</p>
+<h2>📝 Notas clave</h2>
+<ul>
+<li>Cap. 1: Introducción a grupos de Lie.</li>
+<li>Cap. 2: Definición y propiedades de álgebras de Lie.</li>
+</ul>
     </body>
     </html>
     
