--- a/introduction to mechanics and symmetry - jerry e. marsden.html
+++ b/introduction to mechanics and symmetry - jerry e. marsden.html
@@ -13,10 +13,9 @@
     <body>
         <a href="index.html">← Back to Graph</a>
         <h1>introduction to mechanics and symmetry - jerry e. marsden.md</h1>
-        Escriben sobre reducción hamiltoniana, donde se aplican espacios cocientes para simplificar sistemas con simetrías.
-
-## 🔗 Asociado al plan
-[[Plan_Espacios_Cocientes]]
+        <p>Escriben sobre reducción hamiltoniana, donde se aplican espacios cocientes para simplificar sistemas con simetrías.</p>
+<h2>🔗 Asociado al plan</h2>
+<p>[[Plan_Espacios_Cocientes]]</p>
     </body>
     </html>
     
