--- a/on quotient spaces — peter g. bergmann (1973).html
+++ b/on quotient spaces — peter g. bergmann (1973).html
@@ -13,10 +13,9 @@
     <body>
         <a href="index.html">← Back to Graph</a>
         <h1>on quotient spaces — peter g. bergmann (1973).md</h1>
-        Artículo clásico que trata espacios cocientes en el _formalismo canónico con restricciones_, con ejemplos en mecánica clásica, teoría relativista y otros contextos físicos.
-
-## 🔗 Asociado al plan
-[[Plan_Espacios_Cocientes]]
+        <p>Artículo clásico que trata espacios cocientes en el <em>formalismo canónico con restricciones</em>, con ejemplos en mecánica clásica, teoría relativista y otros contextos físicos.</p>
+<h2>🔗 Asociado al plan</h2>
+<p>[[Plan_Espacios_Cocientes]]</p>
     </body>
     </html>
     
