--- a/plan_algebra_de_lie.html
+++ b/plan_algebra_de_lie.html
@@ -13,22 +13,21 @@
     <body>
         <a href="index.html">← Back to Graph</a>
         <h1>plan_algebra_de_lie.md</h1>
-        # Plan de Estudio: Álgebra de Lie
-
-## 🎯 Objetivo
-Entender la estructura algebraica y geométrica de las álgebras de Lie, con aplicaciones en mecánica cuántica y simetrías físicas.
-
-## 📚 Libros asociados
-- [[Hall_Lie_Algebras]]
-
-## ⏳ Duración estimada
-4 meses
-
-## 🔑 Notas de progreso
-- Mes 1: Fundamentos (grupos de Lie y representaciones básicas).
-- Mes 2: Teoría de representaciones.
-- Mes 3-4: Aplicaciones en mecánica cuántica.
-
+        <h1>Plan de Estudio: Álgebra de Lie</h1>
+<h2>🎯 Objetivo</h2>
+<p>Entender la estructura algebraica y geométrica de las álgebras de Lie, con aplicaciones en mecánica cuántica y simetrías físicas.</p>
+<h2>📚 Libros asociados</h2>
+<ul>
+<li>[[Hall_Lie_Algebras]]</li>
+</ul>
+<h2>⏳ Duración estimada</h2>
+<p>4 meses</p>
+<h2>🔑 Notas de progreso</h2>
+<ul>
+<li>Mes 1: Fundamentos (grupos de Lie y representaciones básicas).</li>
+<li>Mes 2: Teoría de representaciones.</li>
+<li>Mes 3-4: Aplicaciones en mecánica cuántica.</li>
+</ul>
     </body>
     </html>
     
