--- a/plan_teoria_de_momentos.html
+++ b/plan_teoria_de_momentos.html
@@ -13,78 +13,48 @@
     <body>
         <a href="index.html">← Back to Graph</a>
         <h1>plan_teoria_de_momentos.md</h1>
-        # Plan de Estudio: Teoría sobre Momentos
-
-Recordatorio de lectura – Medidas, masa y aplicaciones
-
-Cohn – Measure Theory
-→ Construye las bases: qué es una medida, cómo se define y cómo se relaciona con integración y probabilidad. La base conceptual y rigurosa.
-
-Federer – Geometric Measure Theory
-→ Donde aparece el concepto de masa como medida geométrica. Enseña a medir áreas, volúmenes y superficies irregulares con herramientas de medida.
-
-Evans – Partial Differential Equations
-→ Muestra cómo las medidas (y en particular las de masa) se aplican en la física y en las ecuaciones diferenciales que modelan fenómenos reales.
-
-En resumen:
-Leerlos en este orden me permitirá:
-
-Entender las medidas en general.
-
-Ver cómo se aplican para definir masa y geometría.
-
-Conectar esas ideas con aplicaciones físicas reales.
-
-# 📖 Plan de lectura progresivo – Medidas, masa y aplicaciones
-
-## Etapa 1 – Fundamentos (Cohn)
-
-### 👉 Objetivo: entender qué es una medida y cómo se construye.
-
-Cap. 1–2: Introducción a medidas y funciones medibles.
-
-Cap. 3: Teorema de Radon–Nikodym (clave para densidades).
-
-Cap. 5: Integración de Lebesgue (cómo se mide con números).
-
-(No necesitas todo el libro ahora, solo la base que hará que Federer sea entendible.)
-
-## Etapa 2 – Geometría y masa (Federer)
-
-### 👉 Objetivo: ver cómo la noción abstracta de medida se usa para medir objetos geométricos.
-
-Cap. 1: Variedades rectificables.
-
-Cap. 2: La medida de Hausdorff (extensión natural de volumen/área).
-
-Cap. 3: Corrientes y masa → aquí aparece la masa como medida asociada a objetos geométricos.
-
-(Lo importante es que empieces a ver cómo "medir" deja de ser probabilidad y se vuelve geometría real: áreas, volúmenes, superficies rugosas.)
-
-## Etapa 3 – Aplicación física (Evans)
-
-### 👉 Objetivo: ver cómo estas medidas aparecen en ecuaciones diferenciales reales.
-
-Cap. 1–2: Conceptos básicos de PDE (ecuaciones de difusión, onda, etc.).
-
-Cap. 5: Teoría débil de soluciones → conecta directamente con medidas.
-
-Cap. 6: Medidas de energía y métodos de variación → ahí está el puente con Federer.
-
-(Aquí es donde ves, por ejemplo, cómo una medida de masa se usa en el estudio de difusión de calor, fluidos o tensiones en elasticidad.)
-
-## 🔄 Dinámica :
-
-Lee Cohn Cap. 1–2 → luego pasa al inicio de Federer Cap. 1 para ver la aplicación.
-
-Vuelve a Cohn Cap. 3 → conecta con Federer Cap. 2.
-
-Cuando ya tengas Federer Cap. 3 (masa geométrica), pasa a Evans Cap. 5 para ver el uso físico.
-
-## 📚 Libros asociados
-- [[Cohn – Measure Theory]]
-- [[Federer – Geometric Measure Theory]]
-- [[Evans – Partial Differential Equations]]
+        <h1>Plan de Estudio: Teoría sobre Momentos</h1>
+<p>Recordatorio de lectura – Medidas, masa y aplicaciones</p>
+<p>Cohn – Measure Theory
+→ Construye las bases: qué es una medida, cómo se define y cómo se relaciona con integración y probabilidad. La base conceptual y rigurosa.</p>
+<p>Federer – Geometric Measure Theory
+→ Donde aparece el concepto de masa como medida geométrica. Enseña a medir áreas, volúmenes y superficies irregulares con herramientas de medida.</p>
+<p>Evans – Partial Differential Equations
+→ Muestra cómo las medidas (y en particular las de masa) se aplican en la física y en las ecuaciones diferenciales que modelan fenómenos reales.</p>
+<p>En resumen:
+Leerlos en este orden me permitirá:</p>
+<p>Entender las medidas en general.</p>
+<p>Ver cómo se aplican para definir masa y geometría.</p>
+<p>Conectar esas ideas con aplicaciones físicas reales.</p>
+<h1>📖 Plan de lectura progresivo – Medidas, masa y aplicaciones</h1>
+<h2>Etapa 1 – Fundamentos (Cohn)</h2>
+<h3>👉 Objetivo: entender qué es una medida y cómo se construye.</h3>
+<p>Cap. 1–2: Introducción a medidas y funciones medibles.</p>
+<p>Cap. 3: Teorema de Radon–Nikodym (clave para densidades).</p>
+<p>Cap. 5: Integración de Lebesgue (cómo se mide con números).</p>
+<p>(No necesitas todo el libro ahora, solo la base que hará que Federer sea entendible.)</p>
+<h2>Etapa 2 – Geometría y masa (Federer)</h2>
+<h3>👉 Objetivo: ver cómo la noción abstracta de medida se usa para medir objetos geométricos.</h3>
+<p>Cap. 1: Variedades rectificables.</p>
+<p>Cap. 2: La medida de Hausdorff (extensión natural de volumen/área).</p>
+<p>Cap. 3: Corrientes y masa → aquí aparece la masa como medida asociada a objetos geométricos.</p>
+<p>(Lo importante es que empieces a ver cómo "medir" deja de ser probabilidad y se vuelve geometría real: áreas, volúmenes, superficies rugosas.)</p>
+<h2>Etapa 3 – Aplicación física (Evans)</h2>
+<h3>👉 Objetivo: ver cómo estas medidas aparecen en ecuaciones diferenciales reales.</h3>
+<p>Cap. 1–2: Conceptos básicos de PDE (ecuaciones de difusión, onda, etc.).</p>
+<p>Cap. 5: Teoría débil de soluciones → conecta directamente con medidas.</p>
+<p>Cap. 6: Medidas de energía y métodos de variación → ahí está el puente con Federer.</p>
+<p>(Aquí es donde ves, por ejemplo, cómo una medida de masa se usa en el estudio de difusión de calor, fluidos o tensiones en elasticidad.)</p>
+<h2>🔄 Dinámica :</h2>
+<p>Lee Cohn Cap. 1–2 → luego pasa al inicio de Federer Cap. 1 para ver la aplicación.</p>
+<p>Vuelve a Cohn Cap. 3 → conecta con Federer Cap. 2.</p>
+<p>Cuando ya tengas Federer Cap. 3 (masa geométrica), pasa a Evans Cap. 5 para ver el uso físico.</p>
+<h2>📚 Libros asociados</h2>
+<ul>
+<li>[[Cohn – Measure Theory]]</li>
+<li>[[Federer – Geometric Measure Theory]]</li>
+<li>[[Evans – Partial Differential Equations]]</li>
+</ul>
     </body>
     </html>
     
