--- a/quotient maps and configuration spaces of hard disks.html
+++ b/quotient maps and configuration spaces of hard disks.html
@@ -13,12 +13,10 @@
     <body>
         <a href="index.html">← Back to Graph</a>
         <h1>quotient maps and configuration spaces of hard disks.md</h1>
-        Cómo identificar simetrías físicas y construir cocientes.
-
-Artículos como el de _Quotient maps and configuration spaces of hard disks_ presentan cómo construir espacios de configuración identificando simetrías (como permutaciones de partículas o reducción por el centro de masa), ilustrando el uso operativo del espacio cociente en sistemas clásicos.  
-
-## 🔗 Asociado al plan
-[[Plan_Espacios_Cocientes]]
+        <p>Cómo identificar simetrías físicas y construir cocientes.</p>
+<p>Artículos como el de <em>Quotient maps and configuration spaces of hard disks</em> presentan cómo construir espacios de configuración identificando simetrías (como permutaciones de partículas o reducción por el centro de masa), ilustrando el uso operativo del espacio cociente en sistemas clásicos.  </p>
+<h2>🔗 Asociado al plan</h2>
+<p>[[Plan_Espacios_Cocientes]]</p>
     </body>
     </html>
     
