--- a/index.html
+++ b/index.html
@@ -1,140 +1,99 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Graph of Notes</title>
+<style>
+    body { margin: 0; padding: 0; overflow: hidden; background-color: #1e1e1e; }
+    .node { cursor: pointer; }
+    .link { stroke: #999; stroke-opacity: 0.6; }
+    text { font-family: Arial, sans-serif; font-size: 12px; pointer-events: none; fill: #fff; }
+    svg { width: 100vw; height: 100vh; }
+</style>
+</head>
+<body>
+<div id="graph"></div>
+<script src="https://d3js.org/d3.v5.min.js"></script>
+<script>
+// -------------------
+// Nodes y enlaces
+// -------------------
+var nodes = [
+    {id: "plan_teoria_de_momentos.html", label: "Plan Teoria de Momentos", color: "#7f7f7f", link_count: 6},
+    {id: "plan_algebra_de_lie.html", label: "Plan Algebra de Lie", color: "#7f7f7f", link_count: 2},
+    {id: "hall_lie_algebras.html", label: "Hall Lie Algebras", color: "#7f7f7f", link_count: 2},
+    {id: "plan_espacios_cocientes.html", label: "Plan Espacios Cocientes", color: "#7f7f7f", link_count: 11},
+    {id: "evans – partial differential equations.html", label: "Evans – Partial Differential Equations", color: "#7f7f7f", link_count: 2},
+    {id: "introduction to mechanics and symmetry - jerry e. marsden.html", label: "Introduction to Mechanics and Symmetry", color: "#7f7f7f", link_count: 2},
+    {id: "on quotient spaces — peter g. bergmann (1973).html", label: "On Quotient Spaces — Peter G. Bergmann", color: "#7f7f7f", link_count: 2},
+    {id: "federer – geometric measure theory.html", label: "Federer – Geometric Measure Theory", color: "#7f7f7f", link_count: 2},
+    {id: "mathematics for theoretical physics — jean claude dutailly.html", label: "Mathematics for Theoretical Physics", color: "#7f7f7f", link_count: 2},
+    {id: "equivalence relations and quotient spaces — albert s. schwarz.html", label: "Equivalence Relations and Quotient Spaces — Albert S. Schwarz", color: "#7f7f7f", link_count: 2},
+    {id: "cohn – measure theory.html", label: "Cohn – Measure Theory", color: "#7f7f7f", link_count: 2},
+    {id: "quotient maps and configuration spaces of hard disks.html", label: "Quotient Maps and Configuration Spaces", color: "#7f7f7f", link_count: 2}
+];
 
-    <!DOCTYPE html>
-    <html>
-    <head>
-        <meta charset="utf-8">
-        <style>
-            body { margin: 0; padding: 0; overflow: hidden; background-color: #1e1e1e; }
-            .node { cursor: move; }
-            .link { stroke: #999; stroke-opacity: 0.6; }
-            text { font-family: Arial, sans-serif; font-size: 12px; pointer-events: none; fill: #fff; }
-            svg { width: 100vw; height: 100vh; }
-        </style>
-    </head>
-    <body>
-        <div id="graph"></div>
-        <script src="https://d3js.org/d3.v5.min.js"></script>
-        <script>
-            var nodes = [{"id": "plan_teoria_de_momentos.md", "label": "Plan_teoria_de_momentos", "link_count": 6, "color": "#7f7f7f"}, {"id": "plan_algebra_de_lie.md", "label": "Plan_algebra_de_lie", "link_count": 2, "color": "#7f7f7f"}, {"id": "hall_lie_algebras.md", "label": "Hall_lie_algebras", "link_count": 2, "color": "#7f7f7f"}, {"id": "plan_espacios_cocientes.md", "label": "Plan_espacios_cocientes", "link_count": 11, "color": "#7f7f7f"}, {"id": "evans \u2013 partial differential equations.md", "label": "Evans \u2013 partial differential equations", "link_count": 2, "color": "#7f7f7f"}, {"id": "introduction to mechanics and symmetry - jerry e. marsden.md", "label": "Introduction to mechanics and symmetry - jerry e. marsden", "link_count": 2, "color": "#7f7f7f"}, {"id": "on quotient spaces \u2014 peter g. bergmann (1973).md", "label": "On quotient spaces \u2014 peter g. bergmann (1973)", "link_count": 2, "color": "#7f7f7f"}, {"id": "federer \u2013 geometric measure theory.md", "label": "Federer \u2013 geometric measure theory", "link_count": 2, "color": "#7f7f7f"}, {"id": "mathematics for theoretical physics \u2014 jean claude dutailly.md", "label": "Mathematics for theoretical physics \u2014 jean claude dutailly", "link_count": 2, "color": "#7f7f7f"}, {"id": "equivalence relations and quotient spaces \u2014 albert s. schwarz.md", "label": "Equivalence relations and quotient spaces \u2014 albert s. schwarz", "link_count": 2, "color": "#7f7f7f"}, {"id": "cohn \u2013 measure theory.md", "label": "Cohn \u2013 measure theory", "link_count": 2, "color": "#7f7f7f"}, {"id": "quotient maps and configuration spaces of hard disks.md", "label": "Quotient maps and configuration spaces of hard disks", "link_count": 2, "color": "#7f7f7f"}];
-            var links = [{"source": "plan_teoria_de_momentos.md", "target": "cohn \u2013 measure theory.md"}, {"source": "plan_teoria_de_momentos.md", "target": "federer \u2013 geometric measure theory.md"}, {"source": "plan_teoria_de_momentos.md", "target": "evans \u2013 partial differential equations.md"}, {"source": "plan_algebra_de_lie.md", "target": "hall_lie_algebras.md"}, {"source": "hall_lie_algebras.md", "target": "plan_algebra_de_lie.md"}, {"source": "plan_espacios_cocientes.md", "target": "equivalence relations and quotient spaces \u2014 albert s. schwarz.md"}, {"source": "plan_espacios_cocientes.md", "target": "on quotient spaces \u2014 peter g. bergmann (1973).md"}, {"source": "plan_espacios_cocientes.md", "target": "quotient maps and configuration spaces of hard disks.md"}, {"source": "plan_espacios_cocientes.md", "target": "introduction to mechanics and symmetry - jerry e. marsden.md"}, {"source": "plan_espacios_cocientes.md", "target": "mathematics for theoretical physics \u2014 jean claude dutailly.md"}, {"source": "evans \u2013 partial differential equations.md", "target": "plan_teoria_de_momentos.md"}, {"source": "introduction to mechanics and symmetry - jerry e. marsden.md", "target": "plan_espacios_cocientes.md"}, {"source": "on quotient spaces \u2014 peter g. bergmann (1973).md", "target": "plan_espacios_cocientes.md"}, {"source": "federer \u2013 geometric measure theory.md", "target": "plan_teoria_de_momentos.md"}, {"source": "mathematics for theoretical physics \u2014 jean claude dutailly.md", "target": "plan_espacios_cocientes.md"}, {"source": "equivalence relations and quotient spaces \u2014 albert s. schwarz.md", "target": "plan_espacios_cocientes.md"}, {"source": "cohn \u2013 measure theory.md", "target": "plan_teoria_de_momentos.md"}, {"source": "quotient maps and configuration spaces of hard disks.md", "target": "plan_espacios_cocientes.md"}];
-            var colorGroups = [];
+var links = [
+    {source: "plan_teoria_de_momentos.html", target: "cohn – measure theory.html"},
+    {source: "plan_teoria_de_momentos.html", target: "federer – geometric measure theory.html"},
+    {source: "plan_teoria_de_momentos.html", target: "evans – partial differential equations.html"},
+    {source: "plan_algebra_de_lie.html", target: "hall_lie_algebras.html"},
+    {source: "hall_lie_algebras.html", target: "plan_algebra_de_lie.html"},
+    {source: "plan_espacios_cocientes.html", target: "equivalence relations and quotient spaces — albert s. schwarz.html"},
+    {source: "plan_espacios_cocientes.html", target: "on quotient spaces — peter g. bergmann (1973).html"},
+    {source: "plan_espacios_cocientes.html", target: "quotient maps and configuration spaces of hard disks.html"},
+    {source: "plan_espacios_cocientes.html", target: "introduction to mechanics and symmetry - jerry e. marsden.html"},
+    {source: "plan_espacios_cocientes.html", target: "mathematics for theoretical physics — jean claude dutailly.html"},
+    {source: "evans – partial differential equations.html", target: "plan_teoria_de_momentos.html"},
+    {source: "introduction to mechanics and symmetry - jerry e. marsden.html", target: "plan_espacios_cocientes.html"},
+    {source: "on quotient spaces — peter g. bergmann (1973).html", target: "plan_espacios_cocientes.html"},
+    {source: "federer – geometric measure theory.html", target: "plan_teoria_de_momentos.html"},
+    {source: "mathematics for theoretical physics — jean claude dutailly.html", target: "plan_espacios_cocientes.html"},
+    {source: "equivalence relations and quotient spaces — albert s. schwarz.html", target: "plan_espacios_cocientes.html"},
+    {source: "cohn – measure theory.html", target: "plan_teoria_de_momentos.html"},
+    {source: "quotient maps and configuration spaces of hard disks.html", target: "plan_espacios_cocientes.html"}
+];
 
-            var width = window.innerWidth;
-            var height = window.innerHeight;
+// -------------------
+// Grafo D3
+// -------------------
+var width = window.innerWidth, height = window.innerHeight;
+var svg = d3.select("#graph").append("svg").attr("width", width).attr("height", height);
+var g = svg.append("g");
 
-            var svg = d3.select("#graph").append("svg")
-                .attr("width", width)
-                .attr("height", height);
+svg.call(d3.zoom().scaleExtent([0.1,4]).on("zoom", function(event){ g.attr("transform", event.transform); }));
 
-            var g = svg.append("g");
+var simulation = d3.forceSimulation(nodes)
+    .force("link", d3.forceLink(links).id(d=>d.id).distance(100))
+    .force("charge", d3.forceManyBody().strength(-300))
+    .force("center", d3.forceCenter(width/2,height/2));
 
-            var zoom = d3.zoom().scaleExtent([0.1, 4]).on("zoom", function(event){
-                g.attr("transform", event.transform);
-            });
-            svg.call(zoom);
+var link = g.append("g").selectAll("line").data(links).enter().append("line").attr("class","link");
+var node = g.append("g").selectAll("circle").data(nodes).enter().append("circle")
+    .attr("r", d=>5+Math.sqrt(d.link_count))
+    .attr("fill", d=>d.color)
+    .attr("class","node")
+    .on("click", (event,d)=> window.location.href=d.id)
+    .call(d3.drag()
+        .on("start", dragstarted)
+        .on("drag", dragged)
+        .on("end", dragended));
 
-            function customForce(alpha) {
-                const centerX = width / 2;
-                const centerY = height / 2;
-                const strength = 0.05;
-                for (let i = 0; i < nodes.length; i++) {
-                    const node = nodes[i];
-                    node.vx += (centerX - node.x) * strength * alpha;
-                    node.vy += (centerY - node.y) * strength * alpha;
-                }
-            }
+var text = g.append("g").selectAll("text").data(nodes).enter().append("text")
+    .attr("x", 8)
+    .attr("y", ".31em")
+    .text(d=>d.label);
 
-            var simulation = d3.forceSimulation(nodes)
-                .force("link", d3.forceLink(links).id(d => d.id).distance(d => {
-                    const sourceLinks = links.filter(l => l.source.id === d.source.id || l.target.id === d.source.id).length;
-                    const targetLinks = links.filter(l => l.source.id === d.target.id || l.target.id === d.target.id).length;
-                    return Math.min(150, Math.max(50, (sourceLinks + targetLinks) * 10));
-                }))
-                .force("charge", d3.forceManyBody().strength(-300))
-                .force("center", d3.forceCenter(width / 2, height / 2))
-                .force("custom", customForce)
-                .force("collision", labelCollision())
-                .alphaDecay(0.02)
-                .alphaMin(0.001)
-                .on("tick", ticked);
+simulation.on("tick", ()=>{
+    link.attr("x1", d=>d.source.x).attr("y1", d=>d.source.y)
+        .attr("x2", d=>d.target.x).attr("y2", d=>d.target.y);
+    node.attr("cx", d=>d.x).attr("cy", d=>d.y);
+    text.attr("x", d=>d.x+8).attr("y", d=>d.y+3);
+});
 
-            var link = g.append("g")
-                .attr("class", "links")
-                .selectAll("line")
-                .data(links)
-                .enter().append("line")
-                .attr("class", "link");
-
-            var node = g.append("g")
-                .attr("class", "nodes")
-                .selectAll("circle")
-                .data(nodes)
-                .enter().append("circle")
-                .attr("class", "node")
-                .attr("r", d => 5 + Math.sqrt(d.link_count))
-                .attr("fill", d => d.color)
-                .call(d3.drag()
-                    .on("start", dragstarted)
-                    .on("drag", dragged)
-                    .on("end", dragended))
-                .on("click", (event, d) => {
-                    if (!event.defaultPrevented) {
-                        window.location.href = d.id.replace(".md", ".html");
-                    }
-                });
-
-            var text = g.append("g")
-                .attr("class", "texts")
-                .selectAll("text")
-                .data(nodes)
-                .enter().append("text")
-                .attr("x", 8)
-                .attr("y", ".31em")
-                .text(d => d.label);
-
-            function ticked() {
-                link.attr("x1", d => d.source.x)
-                    .attr("y1", d => d.source.y)
-                    .attr("x2", d => d.target.x)
-                    .attr("y2", d => d.target.y);
-                node.attr("cx", d => d.x).attr("cy", d => d.y);
-                text.attr("x", d => d.x + 8).attr("y", d => d.y + 3);
-            }
-
-            function dragstarted(d) {
-                if (!d3.event.active) simulation.alphaTarget(0.3).restart();
-                d.fx = d.x;
-                d.fy = d.y;
-            }
-            function dragged(d) {
-                d.fx = d3.event.x;
-                d.fy = d3.event.y;
-            }
-            function dragended(d) {
-                if (!d3.event.active) simulation.alphaTarget(0);
-                d.fx = null;
-                d.fy = null;
-            }
-            function labelCollision() {
-                var alpha = 0.5;
-                return function() {
-                    for (var i = 0; i < nodes.length; i++) {
-                        for (var j = i + 1; j < nodes.length; j++) {
-                            var nodeA = nodes[i], nodeB = nodes[j];
-                            if(nodeA===nodeB) continue;
-                            var dx=nodeA.x-nodeB.x, dy=nodeA.y-nodeB.y;
-                            var distance=Math.sqrt(dx*dx+dy*dy), minDistance=20;
-                            if(distance<minDistance){
-                                var moveFactor=(minDistance-distance)/distance*alpha;
-                                var mx=dx*moveFactor, my=dy*moveFactor;
-                                nodeA.x+=mx; nodeA.y+=my;
-                                nodeB.x-=mx; nodeB.y-=my;
-                            }
-                        }
-                    }
-                };
-            }
-        </script>
-    </body>
-    </html>
-    
+function dragstarted(event,d){ if(!event.active) simulation.alphaTarget(0.3).restart(); d.fx=d.x; d.fy=d.y; }
+function dragged(event,d){ d.fx=event.x; d.fy=event.y; }
+function dragended(event,d){ if(!event.active) simulation.alphaTarget(0); d.fx=null; d.fy=null; }
+</script>
+</body>
+</html>
